--- a/src/Jasiri.Tests/Jasiri.Tests.csproj
+++ b/src/Jasiri.Tests/Jasiri.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="moq" Version="4.7.142" />
     <PackageReference Include="newtonsoft.json" Version="10.0.3" />
     <PackageReference Include="opentracing" Version="0.10.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
