--- a/src/Jasiri.OpenTracing.Tests/Jasiri.OpenTracing.Tests.csproj
+++ b/src/Jasiri.OpenTracing.Tests/Jasiri.OpenTracing.Tests.csproj
@@ -2,19 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
-    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="microsoft.net.test.sdk" Version="15.3.0-preview-20170628-02" />
     <PackageReference Include="moq" Version="4.7.142" />
     <PackageReference Include="newtonsoft.json" Version="10.0.3" />
+    <PackageReference Include="opentracing" Version="0.10.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Jasiri.OpenTracing\Jasiri.OpenTracing.csproj" />
     <ProjectReference Include="..\Jasiri\Jasiri.csproj" />
   </ItemGroup>
 
