--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ image: Visual Studio 2017
 branches:
   only:
   - develop
+  - master
 init:
   # Good practise, because Windows line endings are different from Unix/Linux ones
   - cmd: git config --global core.autocrlf true
@@ -24,6 +25,8 @@ test_script:
   # restore packages for our unit tests
   # run the unit tests (requires changing into the test directory)
   - cmd: cd src/Jasiri.Tests
+  - cmd: dotnet test
+  - cmd: cd src/Jasiri.OpenTracing.Tests
   - cmd: dotnet test
 on_finish :
   # any cleanup in here
