--- a/src/Jasiri/Jasiri.csproj
+++ b/src/Jasiri/Jasiri.csproj
@@ -3,15 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>Jasiri</PackageId>
-    <PackageVersion>0.1.0</PackageVersion>
-    <Title>OpenTracing compatible Zipkin client. Uses Zipkin V2 api</Title>
+    <PackageVersion>0.2.0</PackageVersion>
+    <Title>Zipkin v2 compatible client library</Title>
     <Authors>Gideon Korir</Authors>
     <Description>
-      OpenTracing compatible Zipkin client. Uses Zipkin V2 API to send spans to zipkin
+      Zipkin V2 client library
     </Description>
     <Copyright>Gideon Korir</Copyright>
     <PackageProjectUrl>https://github.com/gideonkorir/Jasiri</PackageProjectUrl>
-    <PackageTags>OpenTracing, Zipkin, OpenZipkin, Tracing</PackageTags>
+    <PackageTags>Zipkin, OpenZipkin, Tracing</PackageTags>
     <RepositoryUrl>https://github.com/gideonkorir/Jasiri</RepositoryUrl>
   </PropertyGroup>
 
