--- a/src/Jasiri.OpenTracing.Tests/Jasiri.OpenTracing.Tests.csproj
+++ b/src/Jasiri.OpenTracing.Tests/Jasiri.OpenTracing.Tests.csproj
@@ -5,12 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="microsoft.net.test.sdk" Version="15.3.0-preview-20170628-02" />
-    <PackageReference Include="moq" Version="4.7.142" />
-    <PackageReference Include="newtonsoft.json" Version="10.0.3" />
-    <PackageReference Include="opentracing" Version="0.10.0" />
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="microsoft.net.test.sdk" Version="15.6.1" />
+    <PackageReference Include="moq" Version="4.8.2" />
+    <PackageReference Include="newtonsoft.json" Version="11.0.2" />
+    <PackageReference Include="opentracing" Version="0.11.0" />
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
